prefetch artifacts, upgrade aspectj version, remove modules and use mvn-classloader dependency insead ofa